# claude-agent-team

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  Dockerfile.supervisor  LICENSE  Makefile  README.md  docker-compose.demo.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.supervisor.yml  docker-compose.yml  pyproject.toml
config/: project.yaml  prompt_templates.yaml  teams.yaml  thresholds.yaml  tools.yaml  workflows.yaml
config/agents/: _template.yaml  backend_specialist.yaml  code_reviewer.yaml  content_creator.yaml  devops_specialist.yaml  engineering_lead.yaml  frontend_specialist.yaml  prd_specialist.yaml  research_specialist.yaml  tester_specialist.yaml  user_story_author.yaml
config/github-actions-templates/: cleanup.yml  coverage.yml  demo-test.yml  format.yml  lint.yml  security.yml  test.yml
demo/: seed.py
demo/seed-data/: sample-data.json  users.json
docs/: agent-invocation-design.md  architecture.md  cross-cutting-concerns.md  docker-deploy-playbook.md  docker-deployment-assessment.md  expansion-playbook.md  feature-gaps-design.md  prd-per-agent-model-assignment.md  prd-template.md  task-list.md  ui-design.md  ui-mockups.md
frontend/: index.html  nginx.conf  package.json  prettier.config.js  vite.config.ts
secrets/: README.md
src/: main.py
src/agents/: base.py  (+5 more)
supervisor/: README.md  deploy_supervisor.py
tests/: conftest.py  test_agent_framework.py  test_auth.py  test_cassette.py  test_config_validation.py  test_cost_tracking.py  test_demo.py  test_dispatcher.py  test_docker_envs.py  test_eval_framework.py  test_github_integration.py  test_integration_flows.py  test_notifications.py  test_orchestrator.py  test_state.py  test_workflow_engine.py
(+155 files in other folders)
