[project]
name = "claude-agent-team"
version = "0.1.0"
description = "AI Agent Team for PRD, User Story, and Software Development Management"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Chandramouli"},
]

dependencies = [
    "anthropic[bedrock]>=0.52.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "aiosqlite>=0.20.0",
    "websockets>=13.0",
    "structlog>=24.4.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "slowapi>=0.1.9",
    "alembic>=1.13.0",
    "python-multipart>=0.0.9",
    "python-pptx>=1.0.0",
    "weasyprint>=62.3",
    "markdown>=3.6",
    "python-slugify>=8.0.4",
    "firecrawl-py>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"
